--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -24,16 +24,23 @@
         <div class="col-sm-8 mycard">
                 
                 <div class="post-topbar">
-                    <div class="row">
-                        <div class="col-10">
-                            <input class="post_input " placeholder="What's in your mind?" />
-                        </div>
-                        <div class="col-2">
-                            <a class="post btn" href="#" title="">Post</a>
-                        </div>    
+                    
+                    <form action='{% url "index" %}' method="post">
+                        {% csrf_token %}
+                        <div class="row">    
+                            <div class="col-10">
+                                {{ form.as_p}}
+                                <input class="post_input " name="content" placeholder="What's in your mind?" />
+                            </div>
+                            <div class="col-2">
+                                <button class="post btn" type="submit" >Post</button>
+                            </div>   
+                        </div> 
+                        </form>
                         
-                    </div>
+                    
                 </div>
+                 
 
                 <h5>Feed Posts</h5>
 
