adding paths and icons in index page

--- a/posts/static/css/posts.css
+++ b/posts/static/css/posts.css
@@ -27,7 +27,7 @@ img.icondrop {
     font-weight: bold
 }
 
-a{
+#navLink{
     color: #f8f9fa;
     text-decoration: none;
     background-color: transparent;
