--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -12,7 +12,11 @@
             {% for group in groups %}
             <hr>
             <h5>{{group.name}}</h5>
-            <p><button>visit group</button></p>
+            <div class="d-flex pl-3">
+                <p><button class="mx-2">visit group</button></p>
+                <p><button class="mx-2" style="background-color:grey">leave group</button></p>
+            </div>
+            
             <hr>
             {% endfor %}
 
@@ -31,6 +35,7 @@
                             <div class="col-10">
                                 {{ form.as_p}}
                                 <input class="post_input " name="content" placeholder="What's in your mind?" />
+                            
                             </div>
                             <div class="col-2">
                                 <button class="post btn" type="submit" >Post</button>
@@ -48,8 +53,14 @@
                 <hr>
 
                 <div class="card text-center">
-                <div class="card-header">
-                    {{post.owner}}
+                <div class="card-header row">
+                    <p class="col-5 tex-left "><span style="color:#e44d3a;">Post from:</span> {{post.owner}}</p>
+                    <div class="col-2"></div>
+                    <div class="col-5">
+                        <a href="{% url "view" post.id%}" style="color:grey;" class="mx-3"><i class="fa fa-eye" aria-hidden="true"></i></a>
+                        <a href="{% url "edit" post.id%}" style="color:grey;" class="mx-3"><i class="fa fa-pen" aria-hidden="true"></i></a>
+                        <a href="{% url "delete" post.id%}" style="color:grey;" class="mx-3"><i class="fa fa-trash" aria-hidden="true"></i></a>
+                    </div>
                 </div>
                 <div class="card-body">
                     <h5 class="card-text">{{post.content}}</h5>
@@ -57,8 +68,8 @@
                 <div class="card-footer text-muted d-flex">
                     <p >{{post.created_at}}</p>
                     <div style="width:300px"></div>
-                    <a  href="#" style="color:#e44d3a;"><i class="fa fa-comment mx-4 fa-lg" aria-hidden="true"></i></a>
-                    <a  href="#" style="color:#e44d3a;"><i class="fa fa-thumbs-up mx-4 fa-lg" aria-hidden="true"></i></a>
+                    <a href="{% url "view" post.id%}" style="color:#e44d3a;"><i class="fa fa-comment mx-4 fa-lg " aria-hidden="true"></i></a>
+                    <a  href="#" style="color:#e44d3a;"><i class="fa fa-thumbs-up mx-4 fa-lg " aria-hidden="true"></i></a>
                    
                 </div>
                 </div>
