--- a/posts/templates/layout.html
+++ b/posts/templates/layout.html
@@ -26,13 +26,13 @@
         </div>
    
         <div class="col-lg-5 col-sm-9 col-xs-8 d-flex align-items-center justify-content-around ">
-            <a  href="#" ><i class="fa fa-home" aria-hidden="true" ></i><p>Home</p></a>
-            <a  href="#" ><i class="fa fa-users" aria-hidden="true"></i><p>Friends</p></a>
-            <a  href="#" ><i class="fa fa-comments" aria-hidden="true"></i><p>Messages</p></a>
-            <a  href="#" ><i class="fa fa-bell" aria-hidden="true"></i><p>Notifications</p></a>
+            <a  href="#" id="navLink"><i class="fa fa-home" aria-hidden="true" ></i><p>Home</p></a>
+            <a  href="#" id="navLink"><i class="fa fa-users" aria-hidden="true"></i><p>Friends</p></a>
+            <a  href="#" id="navLink"><i class="fa fa-comments" aria-hidden="true"></i><p>Messages</p></a>
+            <a  href="#" id="navLink"><i class="fa fa-bell" aria-hidden="true"></i><p>Notifications</p></a>
             <div >
-                <a  href="#" ><img  class="  m-1 rounded-circle"  src="{% static 'images/exPP3.png'%}"  ></a>
-                <a  href="#" ><img  class=" m-1 icondrop"  src="{% static 'images/iconDropdownWhite.png' %}"  ></a>
+                <a  href="#" id="navLink"><img  class="  m-1 rounded-circle"  src="{% static 'images/exPP3.png'%}"  ></a>
+                <a  href="#" id="navLink"><img  class=" m-1 icondrop"  src="{% static 'images/iconDropdownWhite.png' %}"  ></a>
             </div>
         </div>  
 
