--- a/groups/templates/groups/index.html
+++ b/groups/templates/groups/index.html
@@ -6,22 +6,27 @@
 <div class="container">
     <div class="row pt-5">
         <div class="col-sm-4 ">
-            <form action="" method="GET">
-                <input type="text" name="q" id="" class="post_input " placeholder="Search for group by name">
-                <input type="submit" class="btn" value="Search">
-            </form>
+                 <div class="mycard">
+                <form action="" method="GET">
+                    <input type="text" name="q" id="" class="post_input " placeholder="Search for group by name">
+                    <input type="submit" class="btn mt-2" value="Search">
+                </form>
+            </div>
             
         </div>
         <div class="col-sm-8">
             
             <div class="mycard">
                 <i class="fa fa-users fa-4x" aria-hidden="true"></i>
-                <h1>groups</h1>
+                <h3>groups</h3>
 
                 {% for group in groups %}
                 <hr>
                 <h5>{{group.name}}</h5>
-                <p><button>visit group</button></p>
+                <div class="d-flex pl-3" style="width:100%">
+                    <button class=""  style="width:50%">visit group</button>
+                    <button class="" style="width:50%;background-color:grey">leave group</button>
+                </div>
                 <hr>
                 {% endfor %}
 
