profile routing and page added

--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title> profile </title>
+        <title> profile {{user.id}}</title>
     </head>
 <body>
     <h1>profile</h1>
