--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -10,7 +10,7 @@
             <div class="mycard">
                 <form action="" method="GET">
                     <input type="text" name="q" id="" class="post_input " placeholder="Search for user by name">
-                    <input type="submit" class="btn mt-2" value="Search">
+                    <input type="submit" class="btn mt-2" value="Search"></a>
                 </form>
             </div>    
 
