--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,7 +29,7 @@
             <a  href="/posts/" id="navLink"><i class="fa fa-home" aria-hidden="true" ></i><p>Home</p></a>
             <a  href="/groups/" id="navLink"><i class="fa fa-users" aria-hidden="true"></i><p>groups</p></a>
             <a  href="#" id="navLink"><i class="fa fa-user-friends" aria-hidden="true"></i><p>Friends</p></a>
-            <a  href="#" id="navLink"><i class="fa fa-comments" aria-hidden="true"></i><p>Messages</p></a>
+            <a  href="/messages" id="navLink"><i class="fa fa-comments" aria-hidden="true"></i><p>Messages</p></a>
             <a  href="#" id="navLink"><i class="fa fa-bell" aria-hidden="true"></i><p>Notifications</p></a>
 
             <div >
