send messages done without date

--- a/msgnotifications/templates/index.html
+++ b/msgnotifications/templates/index.html
@@ -32,7 +32,7 @@
             </div>
                     <div class="card p-2">
                         
-                        <form action='?id={{ request.user.id }}' method="post">
+                        <form action="" method="post">
                             {% csrf_token %}
                             <div class="row">    
                                 <div class="col-10">
