--- a/posts/static/css/posts.css
+++ b/posts/static/css/posts.css
@@ -91,6 +91,7 @@ img.icondrop {
     margin-top: 15px;
     background-color: #e44d3a;
     width: 100%;
+    color: seashell;
 }
 .btn-secondary{
     background-color: lightgray;
@@ -101,3 +102,8 @@ img.icondrop {
     border: none;
     
 }
+small {
+    display: block;
+    line-height: 1.428571429;
+    color: #999;
+    }
