--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -5,7 +5,7 @@
         <title> signup </title>
     </head>
 <body>
-<form action="{% url "signup" %}"  method="post" >
+<form action="{% url "signup" %}"  method="post" enctype="multipart/form-data" >
     {% csrf_token %}
     {{form.as_p}}
     {{profile_form.as_p}}
