--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -9,7 +9,7 @@
 
             <div class="mycard">
                 <form action="" method="GET">
-                    <input type="text" name="q" id="" class="post_input " placeholder="Search for user by name">
+                    <input type="text" name="q" id="" class="post_input " placeholder="  Search for user by name">
                     <input type="submit" class="btn mt-2" value="Search"></a>
                 </form>
             </div>    
@@ -46,7 +46,7 @@
                         <div class="row">    
                             <div class="col-10">
                                 {{ form.as_p}}
-                                <input class="post_input " name="content" placeholder="What's in your mind?" />
+                                <input class="post_input " name="content" placeholder="  What's in your mind?" />
                             
                             </div>
                             <div class="col-2">
@@ -69,18 +69,20 @@
                     <div class="row">
                         <p class="col-5 tex-left "><span style="color:#e44d3a;">Post from:</span> {{post.owner}}</p>
                         <div class="col-2"></div>
+                        {% if post.owner == request.user %}
                         <div class="col-5">
                             <a href="{% url "view" post.id%}" style="color:grey;" class="mx-3"><i class="fa fa-eye" aria-hidden="true"></i></a>
                             <a href="{% url "edit" post.id%}" style="color:grey;" class="mx-3"><i class="fa fa-pen" aria-hidden="true"></i></a>
                             <a href="{% url "delete" post.id%}" style="color:grey;" class="mx-3"><i class="fa fa-trash" aria-hidden="true"></i></a>
                         </div>
+                        {% endif %}
                     </div>
                 </div>
                 <div class="card-body">
                     <h5 class="card-text">{{post.content}}</h5>
                 </div>
                 <div class="card-footer text-muted d-flex">
-                    <p >{{post.created_at}}</p>
+                    <p style="text-align:left;color:gray;font-size:12px;margin:0px">{{post.created_at}}</p>
                     <div style="width:300px"></div>
                     <a href="{% url "view" post.id%}" style="color:#e44d3a;"><i class="fa fa-comment mx-4 fa-lg " aria-hidden="true"></i></a>
                     <a  href="#" style="color:#e44d3a;"><i class="fa fa-thumbs-up mx-4 fa-lg " aria-hidden="true"></i></a>
