--- a/posts/templates/users/index.html
+++ b/posts/templates/users/index.html
@@ -23,7 +23,7 @@
                 <div class="d-flex " style="width:100%">
                     <a class="btn-secondary btn" href="/profile/{{user.id}}" style="width:35%;"><i class="fas fa-user"></i>View Profile</a>
                     <button class="post btn" style="width:35%;"><i class="fas fa-user-plus"></i>Add Friend</button>
-                    <a class="btn-secondary btn" href="/messages/{{user.id}}" style="width:35%;"><i class="fas fa-envelope"></i>Send Message</a>
+                    <a class="btn-secondary btn" href="/messages/?id={{ user.id }}" style="width:35%;"><i class="fas fa-envelope"></i>Send Message</a>
 
                 </div>
                 <hr>
