--- a/posts/static/css/posts.css
+++ b/posts/static/css/posts.css
@@ -101,3 +101,27 @@ img.icondrop {
     border: none;
     
 }
+.likes{
+    background-color: #e44d3a;
+    color: #f8f9fa;
+    display: inline-block;
+    padding: 10px;
+    border-radius: 20px;
+    margin-right: 10px;
+}
+.comments{
+    width: 160px;
+    height: 2px;
+    background-color: #e44d3a;
+}
+.add-comment{
+    color:  #e44d3a;
+}
+
+.comment-btn{
+    background-color: #e44d3a;
+    border-radius: 20px;
+    color: #f8f9fa;
+    padding: 10px;
+    font-size: 15px;
+}
