user profile added

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@
             <a  href="#" id="navLink"><i class="fa fa-bell" aria-hidden="true"></i><p>Notifications</p></a>
 
             <div >
-                <a  href="#" id="navLink"><img  class="  m-1 rounded-circle"  src="{% static 'images/exPP3.png'%}"  ></a>
+                <a  href="{% url 'userProfile' %}" id="navLink"><img  class="  m-1 rounded-circle"  src="{% static 'images/exPP3.png'%}"  ></a>
                 <a  href="/logout/" id="navLink">logout</a>
             </div>
         </div>  
