--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -5,11 +5,23 @@
         <title> signup </title>
     </head>
 <body>
-<form action="{% url "signup" %}"  method="post" enctype="multipart/form-data" >
+<!-- <form action="{% url "signup" %}"  method="post" enctype="multipart/form-data" >
     {% csrf_token %}
-    {{form.as_p}}
-    {{profile_form.as_p}}
+    {{form.as_table}}
+    <br>
+    {{profile_form.as_table}}
     <button type="submit">Sign Up</button>
+</form> -->
+<form method="post" action="{% url "signup" %}" enctype="multipart/form-data" >
+    {% csrf_token %}
+    <table>
+       {{ form}}
+       {{ profile_form.as_table }}
+        <tr>
+           <td></td>
+           <td><input type="submit" name="submit" value="Register" /></td>
+       </tr>
+    </table>
 </form>
 
 </body>
