--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,8 +34,13 @@
             <a  href="#" id="navLink"><i class="fa fa-bell" aria-hidden="true"></i><p>Notifications</p></a>
 
             <div >
-                <a  href="{% url 'userProfile' %}" id="navLink"><img  class="  m-1 rounded-circle"  src="{% static 'images/exPP3.png'%}"  ></a>
-                <a  href="/logout/" id="navLink">logout</a>
+                <a  href="{% url 'userProfile' %}" id="navLink"><img  class="  m-1 rounded-circle"  src="{% if user.is_authenticated %} {{request.user.userprofile.avatar.url}} {% else %} /images/avatars/profile.jpeg {% endif %}"  ></a>
+                {% if user.is_authenticated %}
+                <a  href="/logout/" id="navLink">LogOut</a>
+                {% else %}
+                <a  href="/login/" id="navLink">LogIn</a>
+                {% endif %}
+
             </div>
         </div>  
 
