signup/login design edit

--- a/accounts/templates/profileLayout.html
+++ b/accounts/templates/profileLayout.html
@@ -19,8 +19,8 @@
                 </div>
                 <div class="profile-userbuttons">
                     <button class="post btn btn-sm"><i class="fas fa-user-plus"></i>Add Friend</button>
-                    <button type="button" class="btn btn-secondary btn-sm"><i class="fas fa-envelope"> </i>
-                        Message</button>
+                    <a href="/messages/" class="btn btn-secondary btn-sm"><i class="fas fa-envelope"> </i>
+                        Message</a>
                 </div>
                 <div class="profile-usermenu">
                     <ul style="list-style: none;">
