--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="{% static 'css/profile.css'%}" type="text/css">
 
 </head>
-<body>
+<body style="overflow-x:hidden">
 <nav class="nav">
 <nav class="py-1">
 
@@ -36,9 +36,9 @@
             <div >
                 <a  href="{% url 'userProfile' %}" id="navLink"><img  class="  m-1 rounded-circle"  src="{% if user.is_authenticated %} {{request.user.userprofile.avatar.url}} {% else %} /images/avatars/profile.jpeg {% endif %}"  ></a>
                 {% if user.is_authenticated %}
-                <a  href="/logout/" id="navLink">LogOut</a>
+                <a  href="/logout/" id="navLink">Logout</a>
                 {% else %}
-                <a  href="/login/" id="navLink">LogIn</a>
+                <a  href="/login/" id="navLink">Login</a>
                 {% endif %}
 
             </div>
