--- a/posts/templates/posts/view.html
+++ b/posts/templates/posts/view.html
@@ -7,7 +7,20 @@
     
     <strong><h5 style="display: inline-block;font-size: 20px;">{{post.owner}}</h5></strong> -{{post.created_at}}
     <div style="width: 300px;height: 2px;background-color: #e44d3a;"></div>
-    <p style="margin-top: 20px;">{{post.content}}</p>
+    <div class="row">
+        <div class="col-6">
+            <p style="margin-top: 20px;">{{post.content}}</p>
+        </div>
+        <div class="col-6">
+        {% if post.image != null %}
+            <img src="/images/{{post.image }}" width="400px"/>
+        {% endif %}
+        </div>
+
+    </div>
+    
+          
+
      </div>
     
     <hr>
