--- a/groups/templates/groups/index.html
+++ b/groups/templates/groups/index.html
@@ -29,9 +29,9 @@
             leave group
           </button>
         </div>
-        {% endcomment %}
+        {% endcomment %} 
         <div
-          style=" background-image: url({{group.cover.url}});width:200px;height:200px;display:inline-block;background-size: cover;cursor: pointer;"
+          style=" background-image: {% if group.cover != '' %} url({{group.cover.url}}){% else %}url(/images/Default.jpg){% endif %};width:200px;height:200px;display:inline-block;background-size: cover;cursor: pointer;"
           onclick="location.href='{% url "show" group.id %}';" 
         >
           <h2 style="color: white">{{group.name}}</h2>
